# LinkFree-CLI-Rust

./: Cargo.toml  README.md
src/: check_user.rs  create_user.rs  linkfree_struct.rs  main.rs  question.rs
